--- a/AtkTennisWeb/Views/AdminHome/MultiReservations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/MultiReservations.cshtml
@@ -4,6 +4,10 @@
 
 <style>
 
+    input{
+
+        border-color:#f0b800 !important;
+    }
 
     .reservationForm {
         padding: 0.8rem 0 0 0 !important;
@@ -54,7 +58,7 @@
                 <div class="col-md-2">
                     <div class="sticky-top mb-3">
                         <div class="card">
-                            <div class="card-header">
+                            <div style="background-color:#c1ea00" class="card-header">
                                 <h4 class="card-title">Çoklu Rezervasyon Kontrol</h4>
                             </div>
                             <div class="card-body">
