--- a/AtkTennisWeb/Views/SystemSettings/CourtSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/CourtSettings.cshtml
@@ -5,12 +5,11 @@
 <style>
 
     button {
-        border:none !important;
+        border: none !important;
     }
 </style>
 
 <div class="content-wrapper">
-
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -30,9 +29,9 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
-
+                <div class="col-md-6">
                     <div class="card">
+
                         <div class="card-header d-flex justify-content-between">
                             <div class="card-title">
                                 <h3>Kort Türleri</h3>
@@ -43,7 +42,7 @@
                         </div>
 
                         <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover">
+                            <table id="courtTypeTable" class="table table-bordered table-hover">
                                 <thead>
                                     <tr style="text-align:center">
 
@@ -84,78 +83,6 @@
                     <div class="card">
                         <div class="card-header d-flex justify-content-between">
                             <div class="card-title">
-                                <h3>Kort İşlemleri</h3>
-                            </div>
-                            <div>
-                                <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addCourt"><i class="fas fa-plus-square"></i></button>
-                            </div>
-                        </div>
-
-                        <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover">
-                                <thead>
-                                    <tr style="text-align:center">
-                                        <th>Adı </th>
-                                        <th>Türü</th>
-                                        <th>Web Durumu</th>
-                                        <th>Durumu</th>
-                                        <th>Başlangıç Tarihi</th>
-                                        <th>Bitiş Tarihi</th>
-                                        <th>Period</th>
-                                        <th>İşlemler</th>
-
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-
-                                    @foreach (var item in Model.Courts)
-                                    {
-                                        <tr style="text-align:center" id="">
-                                            <td>@item.CourtName</td>
-                                            <td>@item.CourtType</td>
-
-                                            @if (item.CourtWebConditions == 1)
-                                            {
-                                                <td>Web Aktif  </td>
-                                            }
-                                            else
-                                            {
-                                                <td>Web Pasif  </td>
-                                            }
-
-                                            @if (item.CourtConditions == 1)
-                                            {
-                                                <td>Aktif  </td>
-                                            }
-                                            else
-                                            {
-                                                <td>Pasif </td>
-                                            }
-
-                                            <td>@item.CourtStartTime </td>
-                                            <td>@item.CourtFinishTime </td>
-                                            <td>@item.CourtTimePeriod </td>
-
-                                            <td>
-                                                <button class="btn btn-outline-success" id="@item.CourtId" onclick="openUpdateCourtModal(this.id)"><i class="fas fa-edit"></i></button>
-                                                <button class="btn btn-outline-danger" id="@item.CourtId" onclick="deleteCourt(this.id) "><i class="fas fa-trash"></i></button>
-                                            </td>
-
-                                        </tr>
-                                    }
-
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-
-
-
-                    <div class="card">
-                        <div class="card-header d-flex justify-content-between">
-                            <div class="card-title">
                                 <h3>Kort Ücret Tarifesi</h3>
                             </div>
                             <div>
@@ -164,7 +91,7 @@
                         </div>
 
                         <div class="card-body">
-                            <table id="example3" class="table table-bordered table-hover">
+                            <table id="courtPriceTable" class="table table-bordered table-hover">
                                 <thead>
                                     <tr style="text-align:center">
                                         <th>Adı </th>
@@ -217,7 +144,9 @@
                             </table>
                         </div>
                     </div>
-
+                </div>
+            
+                <div class="col-md-6">
                     <div class="card">
                         <div class="card-header d-flex justify-content-between">
                             <div class="card-title">
@@ -263,10 +192,86 @@
                             </table>
                         </div>
                     </div>
+                </div>
+             
 
+            </div>
+
+            <div class="card">
+                <div class="card-header d-flex justify-content-between">
+                    <div class="card-title">
+                        <h3>Kort İşlemleri</h3>
+                    </div>
+                    <div>
+                        <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addCourt"><i class="fas fa-plus-square"></i></button>
+                    </div>
+                </div>
+
+                <div class="card-body">
+                    <table id="example2" class="table table-bordered table-hover">
+                        <thead>
+                            <tr style="text-align:center">
+                                <th>Adı </th>
+                                <th>Türü</th>
+                                <th>Web Durumu</th>
+                                <th>Durumu</th>
+                                <th>Başlangıç Tarihi</th>
+                                <th>Bitiş Tarihi</th>
+                                <th>Period</th>
+                                <th>İşlemler</th>
+
+
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            @foreach (var item in Model.Courts)
+                            {
+                                <tr style="text-align:center" id="">
+                                    <td>@item.CourtName</td>
+                                    <td>@item.CourtType</td>
+
+                                    @if (item.CourtWebConditions == 1)
+                                    {
+                                        <td>Web Aktif  </td>
+                                    }
+                                    else
+                                    {
+                                        <td>Web Pasif  </td>
+                                    }
+
+                                    @if (item.CourtConditions == 1)
+                                    {
+                                        <td>Aktif  </td>
+                                    }
+                                    else
+                                    {
+                                        <td>Pasif </td>
+                                    }
+
+                                    <td>@item.CourtStartTime </td>
+                                    <td>@item.CourtFinishTime </td>
+                                    <td>@item.CourtTimePeriod </td>
+
+                                    <td>
+                                        <button class="btn btn-outline-success" id="@item.CourtId" onclick="openUpdateCourtModal(this.id)"><i class="fas fa-edit"></i></button>
+                                        <button class="btn btn-outline-danger" id="@item.CourtId" onclick="deleteCourt(this.id) "><i class="fas fa-trash"></i></button>
+                                    </td>
+
+                                </tr>
+                            }
+
+
+                        </tbody>
+                    </table>
                 </div>
             </div>
+
+
+
+     
         </div>
+
     </section>
 </div>
 
@@ -573,6 +578,7 @@
                         <label for="recipient-name" class="col-form-label">Tarife Adı:</label>
                         <input type="text" class="form-control" id="recipeName">
                     </div>
+
                     <div class="form-group col-md-6">
                         <label for="recipient-name" class="col-form-label">Tarife Fiyatı:</label>
                         <input type="text" class="form-control" id="recipePrice">
@@ -795,14 +801,38 @@
             "autoWidth": false,
             "responsive": true,
         });
-        $('#courtScaleSet').DataTable({
-            "paging": false,
+
+        $('#courtPriceTable').DataTable({
+            "paging": true,
             "lengthChange": false,
             "searching": false,
             "ordering": true,
             "info": true,
             "autoWidth": false,
             "responsive": true,
+            "pageLength": 6,
+        });
+
+        $('#courtTypeTable').DataTable({
+            "paging": true,
+            "lengthChange": false,
+            "searching": false,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false,
+            "responsive": true,
+            "pageLength": 3,
+        });
+
+        $('#courtScaleSet').DataTable({
+            "paging": true,
+            "lengthChange": false,
+            "searching": false,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false,
+            "responsive": true,
+            "pageLength": 14,
         });
 
 
